feat: change to @npm-showcase scope

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-showcase-utils",
+  "name": "@npm-showcase/utils",
   "version": "1.0.0",
   "description": "utils for npm-showcase",
   "dependencies": {},
@@ -10,9 +10,12 @@
     "eslint": "^7",
     "eslint-config-egg": "^9"
   },
-  "engines": {
-    "node": ">=10.0.0"
-  },
+  "homepage": "https://github.com/atian25/npm-showcase-utils",
+  "repository": "git@github.com:atian25/npm-showcase-utils.git",
+  "files": [
+    "index.js"
+  ],
+  "author": "TZ <atian25@qq.com> (https://github.com/atian25)",
   "scripts": {
     "autod": "autod",
     "lint": "eslint .",
@@ -22,6 +25,9 @@
     "ci": "npm run lint && egg-bin pkgfiles --check && npm run cov",
     "pkgfiles": "egg-bin pkgfiles"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "ci": {
     "version": "12, 14",
     "type": "github"
@@ -30,13 +36,5 @@
     "coverage",
     "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "files": [
-    "index.js"
-  ],
-  "author": "TZ <atian25@qq.com> (https://github.com/atian25)",
   "license": "MIT"
 }
